--- a/Proyecto 2/frontend/index.html
+++ b/Proyecto 2/frontend/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <div id="iframe-container">
-        <iframe src="http://localhost:3000/d/dd1c0811-cc5e-4b24-a085-6ac790735a2f/proyecto-2-ace2?orgId=1&refresh=5s&from=now-7d&to=now" frameborder="0"></iframe>
+        <iframe src="http://localhost:5000/d/dd1c0811-cc5e-4b24-a085-6ac790735a2f/proyecto-2-ace22?orgId=1&refresh=5s&from=1696987364596&to=1696994564596" frameborder="0"></iframe>
     </div>
 
     <script src="script.js"></script>
